--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_API_KEY_YT = 'AIzaSyBCqJ1tnP8UhgSAUigkCPD2p6ZFCKLlS-A'
 VITE_API_KEY_FIREBASE = 'AIzaSyB-ebYYCCHVpyPMKvhx6u73jGWloL6xpgc'
 VITE_MESSAGE_FIREBASE = '765703907237'
 VITE_APPID = '1:765703907237:web:6f742ba403c2fce6ccea4c'
+VITE_AUTH0_DOMAIN= 'dev-tdf6ppqrud0qddw1.us.auth0.com'
+VITE_AUTH0_CLIENT_ID= 'uiIUkEws5JkDHd71RXRNNYQM4ILAqPUh'
